--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,32 @@
-node_modules
+# Dependencies
+node_modules/
+
+# Environment files
 .env
-.DS_Store
-dist
-build
+.env.local
+.env.*.local
+
+# Build outputs
+dist/
+build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Firebase credentials
 serviceAccountKey.json
-coverage
-.vscode
-.idea
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+
+# Test coverage
+coverage/
